<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <CheckBoxPreference
        android:defaultValue="false"
        android:key="PREF_HEIGHT"
        android:onClick="onCheckboxClicked"
        android:summaryOff="@string/description_deleteHeightcor_unchecked"
        android:summaryOn="@string/description_deleteHeightcor_checked"
        android:title="@string/heightcor" />

    <ListPreference
        android:defaultValue="metric"
        android:entries="@array/pref_unit_listentries"
        android:entryValues="@array/pref_unit_listvalues"
        android:key="PREF_UNIT"
        android:summary="@string/pref_unit_summary"
        android:title="@string/pref_unit_title" />


    <Preference android:title="@string/about">
        <intent android:action=".AboutActivity" />
    </Preference>

</PreferenceScreen>