<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">


    <TextView
           android:id="@+id/about_version"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="18sp"
           android:textStyle="bold"
           android:text="@string/about_version" />

    <TextView
        android:id="@+id/about_license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/about_license" />

    <TextView
        android:id="@+id/about_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/about_more" />


</LinearLayout>